# fpnum

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  MatFile.cpp  MatFile.h  accuracy.cpp  arith_map.cpp  common.h  fft_real.cpp
include/: fp8.h  fpnum.h
tests/: ArithmeticTest1.cpp  ArithmeticTest2.cpp  CMakeLists.txt  ComparisonTest.cpp  ConversionTest.cpp  SignTest.cpp
tests/google-test/: CMakeLists.txt  CMakeLists.txt.in
